2011-01-26  Ragner Magalhaes  <ragner.magalhaes@openbossa.org>

Reviewed by Antonio Gomes.

        [Qt] Web Inspector does not highlight elements
        https://bugs.webkit.org/show_bug.cgi?id=35125

        Adjust Web inspector to highlight elements on the page when the mouse
        hovers the element on DOM inspector.

        * Api/qwebframe.cpp:
        (QWebFramePrivate::renderRelativeCoords):
        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientQt::highlight):
        (WebCore::InspectorClientQt::hideHighlight):
2011-04-14  Ragner Magalhaes  <ragner.magalhaes@openbossa.org>

        Reviewed by Antonio Gomes.

        [Qt] Web Inspector does not highlight elements
        https://bugs.webkit.org/show_bug.cgi?id=35125

        We should call drawNodeHighlight() just if a highlighted node exists
        to avoid do save()/restore() on the Graphics Context unnecessarily.

        Added highlightedNode() method to check if we need to call drawNodeHighlight()
        and only on this case do save()/restore() on the Graphics Context.

        * inspector/InspectorAgent.h:
        (WebCore::InspectorAgent::highlightedNode):


Canonical link: https://commits.webkit.org/73647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83892 268f45cc-cd09-0410-ab3c-d52691b4dbfc